--- a/hello.html
+++ b/hello.html
@@ -20,8 +20,8 @@
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="/"class="mr-5 hover:text-gray-900">Home</a>
             <a href="/"class="mr-5 hover:text-gray-900">About </a>
-            <a href="/KDFITNESSWEBSITE/services.html"class="mr-5 hover:text-gray-900">Services</a>
-            <a href="/KDFITNESSWEBSITE/contact.html"class="mr-5 hover:text-gray-900">Contact</a>
+            <a href="/services.html"class="mr-5 hover:text-gray-900">Services</a>
+            <a href="/contact.html"class="mr-5 hover:text-gray-900">Contact</a>
           </nav>
           <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Click Here Check
             <!-- <a href="/"class=""</a> -->
