--- a/hello.html
+++ b/hello.html
@@ -18,8 +18,8 @@
             <span class="ml-3 text-xl">K-FITNESS</span>
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-            <a href="/"class="mr-5 hover:text-gray-900">Home</a>
-            <a href="/"class="mr-5 hover:text-gray-900">About </a>
+            <a href="/KDFITNESSWEBSITE/hello.html"class="mr-5 hover:text-gray-900">Home</a>
+            <a href="/KDFITNESSWEBSITE/about.html"class="mr-5 hover:text-gray-900">About </a>
             <a href="/KDFITNESSWEBSITE/services.html"class="mr-5 hover:text-gray-900">Services</a>
             <a href="/KDFITNESSWEBSITE/contact.html"class="mr-5 hover:text-gray-900">Contact</a>
           </nav>
