--- a/hello.html
+++ b/hello.html
@@ -19,29 +19,30 @@
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="/KDFITNESSWEBSITE/hello.html"class="mr-5 hover:text-gray-900">Home</a>
-            <a href="/KDFITNESSWEBSITE/about.html"class="mr-5 hover:text-gray-900">About </a>
+            <a href="/KDFITNESSWEBSITE/about.html"class="mr-5 hover:text-gray-900">About</a>
             <a href="/KDFITNESSWEBSITE/services.html"class="mr-5 hover:text-gray-900">Services</a>
-            <a href="/KDFITNESSWEBSITE/contact.html"class="mr-5 hover:text-gray-900">Contact</a>
+            <a href="/KDFITNESSWEBSITE/contact.html"class="mr-5 hover:text-gray-900">Contact Us</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Click Here Check
-            <!-- <a href="/"class=""</a> -->
+          <!-- <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Click Here Check
+            <a href="/"class=""</a> 
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
-          </button>
+          </button> -->
         </div>
       </header>
     
       <section class="text-gray-700 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ready to Get Fit
-              <br class="hidden lg:inline-block">Let's Get Started
-            </h1>
-            <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+            <h2 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ready to Get Fit</h2>
+              <!-- <br class="hidden lg:inline-block">Let's Get Started -->
+              <h1 class="title-font sm:text-2xl text-2xl mb-4 font-medium text-gray-900">Let's Get Started</h1>
+            <p class="mb-8 leading-relaxed">Physical fitness is a state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations and daily activities. Physical fitness is generally achieved through proper nutrition, moderate-vigorous physical exercise, and sufficient rest. 
+              Before the industrial revolution, fitness was defined as the capacity to carry out the day’s activities without undue fatigue. However, with automation and changes in lifestyles physical fitness is now considered a measure of the body's ability to function efficiently and effectively in work and leisure activities, to be healthy, to resist hypokinetic diseases, and to meet emergency situations.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button>
-              <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg">Button</button>
+              <!-- <button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button>
+              <button class="ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg">Button</button> -->
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -54,14 +55,22 @@
 <section class="text-gray-700 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
-      <h2 class="text-xs text-red-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Master Cleanse Reliac Heirloom</h1>
-      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
+      <!-- <h2 class="text-xs text-red-500 tracking-widest font-medium title-font mb-1">----FITNESS----</h2> -->
+    <b><h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">OUR FITNESS PROGRAMS</h1></b>
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">There are list of Programs for Everyone according to body types.</p>
     </div>
     <div class="flex flex-wrap">
       <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
-        <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-        <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+        <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Star</h2>
+        <p class="leading-relaxed text-base mb-4">
+          <dl>
+            <li>Full Body Fitness</li>
+            <li>Chest</li>
+            <li>Reduce Belly Fat</li>
+            <li>Cardio</li>
+          </dl>  
+        </p>
+        <br>
         <a class="text-red-500 inline-flex items-center">Learn More
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -70,7 +79,15 @@
       </div>
       <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
         <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-        <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+        <p class="leading-relaxed text-base mb-4">
+          <dl>
+            <li>Rock Hard ABS</li>
+            <li>Extensive Chest</li>
+            <li>Broaden Shoulder</li>
+            <li>Biceps & Triceps</li>
+          </dl>
+        </p>
+        <br>
         <a class="text-red-500 inline-flex items-center">Learn More
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -79,7 +96,15 @@
       </div>
       <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
         <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-        <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+        <p class="leading-relaxed text-base mb-4">
+          <dl>
+            <li>Personal Mentoring</li>
+            <li>Beginner</li>
+            <li>Intermediate</li>
+            <li>Advanced</li>
+          </dl>
+        </p>
+        <br>
         <a class="text-red-500 inline-flex items-center">Learn More
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -88,7 +113,15 @@
       </div>
       <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200">
         <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-        <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+        <p class="leading-relaxed text-base mb-4">
+          <dl>
+            <li>Zoomba Training</li>
+            <li>Dodhiya Classes</li>
+            <li>Aerobics Fitness</li>
+            <li>Dance Classes</li>
+          </dl>
+        </p>
+        <br>
         <a class="text-red-500 inline-flex items-center">Learn More
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -96,7 +129,7 @@
         </a>
       </div>
     </div>
-    <button class="flex mx-auto mt-16 text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button>
+    <!-- <button class="flex mx-auto mt-16 text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Button</button> -->
   </div>
 </section>
 <hr>
@@ -107,29 +140,29 @@
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-red-500 rounded-full" viewBox="0 0 24 24">
             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
           </svg>
-          <span class="ml-3 text-xl">tailblocks</span>
+          <span class="ml-3 text-xl">K-FITNESS</span>
         </a>
-        <p class="mt-2 text-sm text-gray-500">Air plant banjo lyft occupy retro adaptogen indego</p>
+        <p class="mt-2 text-sm text-gray-500">Things work out best for those who make the best of how things work out.</p>
       </div>
       <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
           <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
-              <a class="text-gray-600 hover:text-gray-800">First Link</a>
+              <a class="text-gray-600 hover:text-gray-800" href="/KDFITNESSWEBSITE/hello.html">Home</a>
             </li>
             <li>
-              <a class="text-gray-600 hover:text-gray-800">Second Link</a>
+              <a class="text-gray-600 hover:text-gray-800" href="/KDFITNESSWEBSITE/about.html">About</a>
             </li>
             <li>
-              <a class="text-gray-600 hover:text-gray-800">Third Link</a>
+              <a class="text-gray-600 hover:text-gray-800" href="/KDFITNESSWEBSITE/services.html">Services</a>
             </li>
             <li>
-              <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+              <a class="text-gray-600 hover:text-gray-800" href="/KDFITNESSWEBSITE/contact.html">Contact Us</a>
             </li>
           </nav>
         </div>
-        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+        <!-- <div class="lg:w-1/4 md:w-1/2 w-full px-4">
           <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
           <nav class="list-none mb-10">
             <li>
@@ -179,35 +212,35 @@
               <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
             </li>
           </nav>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="bg-gray-200">
       <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-        <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 tailblocks —
-          <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@knyttneve</a>
+        <p class="text-gray-500 text-sm text-center sm:text-left">2020 ©thesmartyking —
+          <a href="https://www.instagram.com/the_smarty_king" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@thesmartyking</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-          <a class="text-gray-500">
+          <a class="text-gray-500" href="https://www.facebook.com/kenildoshi19">
             <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
             </svg>
           </a>
-          <a class="ml-3 text-gray-500">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-            </svg>
-          </a>
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500" href="https://www.instagram.com/the_smarty_king">
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
               <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
             </svg>
           </a>
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500" href="https://www.linkedin.com/in/kenil-doshi-98224617b">
             <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
               <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
               <circle cx="4" cy="4" r="2" stroke="none"></circle>
+            </svg>
+          </a>
+          <a class="ml-3 text-gray-500"  href="https://twitter.com/kdsmarty19">
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
             </svg>
           </a>
         </span>
