--- a/contact.html
+++ b/contact.html
@@ -17,16 +17,33 @@
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
-              <input class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-red-500 text-base px-4 py-2" placeholder="Name" type="text">
+              <input id="name" class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-red-500 text-base px-4 py-2" placeholder="Name" type="text">
             </div>
             <div class="p-2 w-1/2">
-              <input class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-red-500 text-base px-4 py-2" placeholder="Email" type="email">
+              <input id="email" class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none focus:border-red-500 text-base px-4 py-2" placeholder="Email" type="email">
             </div>
             <div class="p-2 w-full">
-              <textarea class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none h-48 focus:border-red-500 text-base px-4 py-2 resize-none block" placeholder="Message"></textarea>
+              <textarea id="message" class="w-full bg-gray-100 rounded border border-gray-400 focus:outline-none h-48 focus:border-red-500 text-base px-4 py-2 resize-none block" placeholder="Message"></textarea>
             </div>
             <div class="p-2 w-full">
-              <button class="flex mx-auto text-white bg-red-600 border-0 py-2 px-8 focus:outline-none hover:bg-red-800 rounded text-lg">Submit</button>
+              <button onclick="myFunction()" class="flex mx-auto text-white bg-red-600 border-0 py-2 px-8 focus:outline-none hover:bg-red-800 rounded text-lg">Submit</button>
+              <script>
+                function myFunction() {
+                  var name=document.getElementById("name").value;
+                  var email=document.getElementById("email").value;
+                  var message=document.getElementById("message").value;
+                  console.log(name)
+                  console.log(email)
+                  console.log(message)
+
+        //          if(name==null && email==null && message==null ){
+                  if(name!=='' && email!=='' && message!=='' ){
+                    alert("Thankyou "+name+" For Submitting Details ");
+                  }
+                  else
+                  alert("Please Fill The form")
+                }
+                </script>
             </div>
             <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
               <!-- <a class="text-red-500">k-fitness@gmail.com</a> -->
