--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,9 @@
                   //if(name==null && email==null && message==null ){
                   if(name!=='' && email!=='' && message!=='' ){
                     var str="Thankyou "+name.trim()+" For Submitting Details"
-                    //alert(str);
-                    if(confirm(str))
+                    alert(str);
+                    window.location="/KDFITNESSWEBSITE/hello.html"
+                    /* if(confirm(str))
                     { window.location="/KDFITNESSWEBSITE/hello.html"
                       //document.body.appendChild(/KDFITNESSWEBSITE/hello.html);
                       //str.link(/KDFITNESSWEBSITE/hello.html);
@@ -48,7 +49,7 @@
                       //console.log(window.location="/KDFITNESSWEBSITE/hello.html")
                     } 
                     else
-                      window.location="/KDFITNESSWEBSITE/contact.html"
+                      window.location="/KDFITNESSWEBSITE/contact.html" */
 
                   }
                   else
