--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
                     
                     alert(str);
-                    window.location="/KDFITNESSWEBSITE/hello.html"
+                    //window.location="/KDFITNESSWEBSITE/hello.html"
 
                     //window.location="/KDFITNESSWEBSITE/hello.html"
                     /* if(confirm(str))
