--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,8 @@
                     
                     alert(str);
                     //window.location="/KDFITNESSWEBSITE/hello.html"
+                    window.location.replace("https://thesmartyking.github.io/KDFITNESSWEBSITE/hello.html");
+                    //window.location.replace("http://www.w3schools.com");
 
                     //window.location="/KDFITNESSWEBSITE/hello.html"
                     /* if(confirm(str))
