--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                     
                     alert(str);
                     //window.location="/KDFITNESSWEBSITE/hello.html"
-                    window.location.replace("https://thesmartyking.github.io/KDFITNESSWEBSITE/hello.html");
+                    window.location.href="https://thesmartyking.github.io/KDFITNESSWEBSITE/hello.html";
                     //window.location.replace("http://www.w3schools.com");
 
                     //window.location="/KDFITNESSWEBSITE/hello.html"
